# renovate-poc

./: README.md
.github/: renovate.json
npm/example-one/: package-lock.json  package.json
rust/example-one/: Cargo.toml
