[package]
name = "hello-world"
version = "0.1.0"
authors = ["Fluence Labs"]
description = "Hello world string computation"
edition = "2018"
publish = false

[[bin]]
name = "hello_world"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.14"
rand = "0.8.5"
regex = "1.6.0"
schemars = "0.8.10"

[dev-dependencies]
marine-rs-sdk-test = "0.4.1"
